--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3232,7 +3232,7 @@ body.is-touch #banner {
   padding-left: 0;
 }
 
-#embedded-vid {
+.embedded-thing {
   width: 100%;
   height: 600px;
 }
@@ -3252,7 +3252,7 @@ body.is-touch #banner {
     padding: 6em 0 4em 0;
   }
 
-  #embedded-vid {
+  .embedded-thing {
     width: 100%;
     height: 500px;
   }
@@ -3279,7 +3279,7 @@ body.is-touch #banner {
     font-size: 1em;
   }
 
-  #embedded-vid {
+  .embedded-thing {
     width: 100%;
     height: 400px;
   }
