--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3309,3 +3309,8 @@ body.is-touch #banner {
   }
 
 }
+
+.supermarket:hover {
+    cursor: pointer;
+    background-color: rgba(240, 240, 240, 200);
+}
